--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 ###> symfony/framework-bundle ###
 /.env.local
 /.env.local.php
@@ -6,10 +5,11 @@
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
 /var/cache/
+/var/
 /vendor/
 ###< symfony/framework-bundle ###
 /public/uploads/
- /public/uploads/recipe/
+/public/uploads/recipe/
 ###> phpunit/phpunit ###
 /phpunit.xml
 .phpunit.result.cache
@@ -24,4 +24,3 @@
 /public/assets/
 /assets/vendor/
 ###< symfony/asset-mapper ###
-
